...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="C | Richter" />

    <TableLayout
        android:id="@+id/harp_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:stretchColumns="*"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tuning_key_info"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/overlay_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/overlay_note"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:autoSizeTextType="uniform"
...
