...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/training_trainings_label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/training_trainings_list"
                        style="@style/ModernSpinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:spinnerMode="dropdown" />
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/training_precision_label"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Spinner
                        android:id="@+id/training_precision_list"
                        style="@style/ModernSpinner"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:spinnerMode="dropdown" />
...
